@@ -11,7 +11,7 @@ use ExtUtils::MakeMaker ();
 
 use vars qw{$VERSION @ISA};
 BEGIN {
-	$VERSION = '0.60';
+	$VERSION = '0.61';
 	@ISA     = qw{Module::Install::Base};
 }
 
