@@ -4,7 +4,7 @@ package Module::Install::Metadata;
 use Module::Install::Base;
 @ISA = qw{Module::Install::Base};
 
-$VERSION = '0.60';
+$VERSION = '0.61';
 
 use strict 'vars';
 
